# AutoFFI

./: .gitignore  .travis.yml  BUILDING.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  appveyor.yaml  autoffi.proto  transit.proto
cmake/Modules/: FindClang.cmake  FindSTDLIB.cmake
doc/: add-platform.md
example/: .gitignore  Makefile  README.md  myprog.c  test.rkt
include/AutoFFI/: AST.h  Catalog.h  ClangSourceAnalyser.h  CountMap.hpp  Format.h  SymbolTable.h  TypeSorter.h  filesystem.h
include/Transit/: AST.h  Analyser.h  Catalog.h  ClangSourceAnalyser.h  CountMap.hpp  Format.h  Indexer.hpp  SymbolTable.h  TypeSorter.h
scripts/: default_llvm.sh  install_boost.sh  install_protobuf.sh
src/: AST.cpp  Catalog.cpp  JsonFormat.cpp  ProtoFormat.cpp  SymbolTable.cpp  TypeSorter.cpp  ast.proto  autoffi.pb.cc  autoffi.pb.h  clang.cpp  clang.h  config.h.in  exepath.cpp  generate.cpp  json.cpp  list.cpp  proto.cpp  transit.pb.cc  transit.pb.h
test/: analysis.cpp  ast.cpp
